blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/Role__c.object-meta.xml
<CustomObject>
    <description>One vacancy a client has asked us to fill, with its terms, fee basis and status. This is the job order. Candidates are submitted against it. A client company has many roles over time.</description>
    <label>Role</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>