blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every role a client has given us.</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>