blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Client_deal__c.field-meta.xml
<CustomField>
    <fullName>Client_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties each role to the client deal whose terms it runs under.</description>
    <label>Client deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>