blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The recruiter responsible for the role.</description>
    <label>Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Roles Consultant</relationshipLabel>
    <relationshipName>Role_Consultant</relationshipName>
    <type>Lookup</type>
</CustomField>