blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Employment_type__c.field-meta.xml
<CustomField>
    <fullName>Employment_type__c</fullName>
    <description>Permanent, contract or temporary. Contract and temporary roles are paid by margin, not percentage.</description>
    <label>Employment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>