blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Fee_estimate__c.field-meta.xml
<CustomField>
    <fullName>Fee_estimate__c</fullName>
    <description>Expected fee if the role is filled, from fee percent and salary midpoint. Used for the weighted forecast.</description>
    <label>Fee estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>