blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Fee_percent__c.field-meta.xml
<CustomField>
    <fullName>Fee_percent__c</fullName>
    <description>Fee as a percentage of first-year salary for this role. Defaults from the client's terms.</description>
    <label>Fee percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>