blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Hiring_manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a role to the client contact who owns the hire.</description>
    <label>Hiring manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>