blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Openings__c.field-meta.xml
<CustomField>
    <fullName>Openings__c</fullName>
    <description>Number of people the client wants to hire into this role.</description>
    <label>Openings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>