blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Received_date__c.field-meta.xml
<CustomField>
    <fullName>Received_date__c</fullName>
    <description>The day the client gave us the role. Used to measure time to fill.</description>
    <label>Received date</label>
    <type>Date</type>
</CustomField>