blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Salary_max__c.field-meta.xml
<CustomField>
    <fullName>Salary_max__c</fullName>
    <description>Top of the annual salary range. The fee estimate uses the midpoint.</description>
    <label>Salary maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>