blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Salary_min__c.field-meta.xml
<CustomField>
    <fullName>Salary_min__c</fullName>
    <description>Bottom of the annual salary range the client has given us.</description>
    <label>Salary minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>