blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Search_model__c.field-meta.xml
<CustomField>
    <fullName>Search_model__c</fullName>
    <description>How this role is engaged. Decides when we are paid.</description>
    <label>Search model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contingent</fullName>
            </value>
            <value>
                <fullName>Retained</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Contract or temp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>