blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Specialism__c.field-meta.xml
<CustomField>
    <fullName>Specialism__c</fullName>
    <description>The desk or specialism responsible. Used to route roles and report by desk.</description>
    <label>Specialism</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Sales and marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>