blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Where the role stands with the client. Roles are reported on by status, so this is a select, not a stage.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Offer stage</fullName>
            </value>
            <value>
                <fullName>Filled by us</fullName>
            </value>
            <value>
                <fullName>Filled elsewhere</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>