blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Target_fill_date__c.field-meta.xml
<CustomField>
    <fullName>Target_fill_date__c</fullName>
    <description>The day the client needs the role filled by.</description>
    <label>Target fill date</label>
    <type>Date</type>
</CustomField>