blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/fields/Work_location__c.field-meta.xml
<CustomField>
    <fullName>Work_location__c</fullName>
    <description>Where the work happens. Used to match candidates.</description>
    <label>Work location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>