blueprints/recruitment-agency/salesforce/force-app/main/default/objects/Role__c/listViews/Open_roles.listView-meta.xml
<ListView>
    <fullName>Open_roles</fullName>
    <columns>NAME</columns>
    <columns>Target_fill_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Offer stage</value>
    </filters>
    <label>Open roles</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>